[gd_scene load_steps=20 format=3 uid="uid://byvj7v3gckdtu"]

[ext_resource type="Script" path="res://scenes/levels/fase_bau/World.gd" id="1_jjxra"]
[ext_resource type="Texture2D" uid="uid://ktbwckpnwub1" path="res://assets/background/Wood.png" id="2_173lg"]
[ext_resource type="AudioStream" uid="uid://c263thrhuao60" path="res://assets/audio/adventure_time.mp3" id="3_phgk4"]
[ext_resource type="Texture2D" uid="uid://dv7cps4lk8eay" path="res://assets/objects/Box.png" id="4_erlyc"]
[ext_resource type="Texture2D" uid="uid://qq785icl5xo8" path="res://assets/objects/Gold_10.png" id="5_cdg72"]
[ext_resource type="Texture2D" uid="uid://de8uy1hig33pf" path="res://assets/objects/Trunk_ani.png" id="6_2x1wg"]
[ext_resource type="AudioStream" uid="uid://o2uc2mrbewjv" path="res://assets/audio/Bau abrindo.wav" id="7_jdabo"]
[ext_resource type="Texture2D" uid="uid://b0g0b2r8fln5f" path="res://assets/objects/Cloud.png" id="8_jewbj"]
[ext_resource type="Texture2D" uid="uid://ciltfqh56wvgy" path="res://assets/objects/Lock.png" id="9_16iow"]
[ext_resource type="Texture2D" uid="uid://ds74c1puewxqy" path="res://assets/objects/Key_Golden.png" id="10_q5jfk"]
[ext_resource type="Texture2D" uid="uid://7sa2f1gkjpae" path="res://assets/objects/Key_Silver.png" id="11_kppco"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ow004"]
size = Vector2(800, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bh8tv"]
size = Vector2(101, 99)

[sub_resource type="AtlasTexture" id="AtlasTexture_tokif"]
atlas = ExtResource("6_2x1wg")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdr58"]
atlas = ExtResource("6_2x1wg")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlran"]
atlas = ExtResource("6_2x1wg")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_81a88"]
atlas = ExtResource("6_2x1wg")
region = Rect2(0, 200, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn4tt"]
atlas = ExtResource("6_2x1wg")
region = Rect2(0, 200, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_a14s5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tokif")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_xdr58")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_rlran")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_81a88")
}],
"loop": false,
"name": &"Open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn4tt")
}],
"loop": true,
"name": &"Opened",
"speed": 5.0
}]

[node name="Mundo" type="Node2D"]
script = ExtResource("1_jjxra")

[node name="Wood" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_173lg")

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_phgk4")
volume_db = -35.0
pitch_scale = 2.0
autoplay = true

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(400, 598.5)
shape = SubResource("RectangleShape2D_ow004")

[node name="Box" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box"]
position = Vector2(576, 547.5)
shape = SubResource("RectangleShape2D_bh8tv")

[node name="img" type="Sprite2D" parent="Box"]
position = Vector2(576, 509.5)
scale = Vector2(1, 1.57031)
texture = ExtResource("4_erlyc")

[node name="Coin" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(412.474, 246.215)
scale = Vector2(0.159213, 0.14539)
texture = ExtResource("5_cdg72")

[node name="Trunk" type="AnimatedSprite2D" parent="."]
position = Vector2(575, 417)
sprite_frames = SubResource("SpriteFrames_a14s5")
animation = &"Open"

[node name="open_sound" type="AudioStreamPlayer" parent="Trunk"]
stream = ExtResource("7_jdabo")

[node name="Cloud" type="Sprite2D" parent="."]
position = Vector2(576, 182.125)
scale = Vector2(1.73478, 1.31436)
texture = ExtResource("8_jewbj")

[node name="Keys" type="Node2D" parent="."]
visible = false
position = Vector2(200, 0)

[node name="reset_timer" type="Timer" parent="Keys"]
wait_time = 7.0
one_shot = true

[node name="Lock" type="Sprite2D" parent="Keys"]
position = Vector2(561, 171)
texture = ExtResource("9_16iow")

[node name="enum" type="Label" parent="Keys/Lock"]
offset_left = -19.0
offset_top = -92.0
offset_right = 21.0
offset_bottom = -69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "3+7"

[node name="Quest" type="Label" parent="Keys/Lock"]
offset_left = -91.0
offset_top = 74.0
offset_right = 180.0
offset_bottom = 137.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Número da chave que 
abre o baú:"

[node name="LineEdit" type="LineEdit" parent="Keys/Lock"]
offset_left = 11.0
offset_top = 100.0
offset_right = 78.0625
offset_bottom = 131.0

[node name="Key1" type="Sprite2D" parent="Keys"]
position = Vector2(200, 160)
texture = ExtResource("10_q5jfk")

[node name="enum_op1" type="Label" parent="Keys/Key1"]
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Chave 1"
metadata/_edit_use_anchors_ = true

[node name="op1" type="Label" parent="Keys/Key1"]
anchors_preset = -1
anchor_left = 0.09375
anchor_top = 0.445313
anchor_right = 0.09375
anchor_bottom = 0.445313
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Key2" type="Sprite2D" parent="Keys"]
position = Vector2(334, 160)
texture = ExtResource("11_kppco")

[node name="enum_op2" type="Label" parent="Keys/Key2"]
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Chave 2
"
metadata/_edit_use_anchors_ = true

[node name="op2" type="Label" parent="Keys/Key2"]
anchors_preset = -1
anchor_left = 0.101563
anchor_top = 0.414063
anchor_right = 0.101563
anchor_bottom = 0.414063
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Key3" type="Sprite2D" parent="Keys"]
position = Vector2(200, 254)
texture = ExtResource("11_kppco")

[node name="enum_op3" type="Label" parent="Keys/Key3"]
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Chave 3
"
metadata/_edit_use_anchors_ = true

[node name="op3" type="Label" parent="Keys/Key3"]
anchors_preset = -1
anchor_left = 0.09375
anchor_top = 0.398438
anchor_right = 0.09375
anchor_bottom = 0.398438
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Key4" type="Sprite2D" parent="Keys"]
position = Vector2(328, 257)
texture = ExtResource("10_q5jfk")

[node name="enum_op4" type="Label" parent="Keys/Key4"]
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Chave 4
"
metadata/_edit_use_anchors_ = true

[node name="op4" type="Label" parent="Keys/Key4"]
anchors_preset = -1
anchor_left = 0.132813
anchor_top = 0.414063
anchor_right = 0.132813
anchor_bottom = 0.414063
offset_left = -27.0
offset_top = -38.0
offset_right = 43.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Keys/reset_timer" to="." method="_on_reset_timer_timeout"]
[connection signal="text_submitted" from="Keys/Lock/LineEdit" to="." method="_on_line_edit_text_submitted"]
